--- a/assets/css/profile.css
+++ b/assets/css/profile.css
@@ -51,7 +51,7 @@ body{
 
 }
 .tab{
-  padding:10px 16px; border-radius:0  0 20px 20px; background:rgba(255,255,255,.35);
+  padding:10px 16px; border-radius:0 20px 0  20px; background:rgba(255,255,255,.35);
   font-weight:700; color:#1a1a1a; cursor:pointer; border:2px solid rgba(0,0,0,.06);
 }
 .tab.active{ background:#ffe09b; border-color:#e3b34d; box-shadow:var(--soft-shadow-sm)}
